--- a/src/slider/view/styles/view.scss
+++ b/src/slider/view/styles/view.scss
@@ -8,9 +8,12 @@ $sliderWidth: 5px;
 
   &__bar {
     position: relative;
-    width: 100%;
-    height: $sliderWidth;
     background-color: rgb(206, 206, 206);
+
+    &_horizontal {
+      width: 100%;
+      height: $sliderWidth;
+    }
 
     &_vertical {
       width: $sliderWidth;
@@ -20,10 +23,13 @@ $sliderWidth: 5px;
 
   &__range {
     position: absolute;
-    height: 100%;
-    left: 0%;
-    right: 0%;
     background-color: tomato;
+
+    &_horizontal {
+      height: 100%;
+      left: 0%;
+      right: 0%;
+    }
 
     &_vertical {
       height: auto;
@@ -38,12 +44,19 @@ $sliderWidth: 5px;
     width: 15px;
     height: 15px;
     background-color: rgb(129, 46, 46);
-    transform: translate(-46%, -33%);
-    left: 10%;
+
+    &_horizontal {
+      transform: translate(-46%, -33%);
+    }
 
     &_vertical {
       bottom: 0%;
       transform: translate(-33%, 44%);
+    }
+
+    &_last-active {
+      z-index: 3;
+      background-color: rgb(0, 255, 76);
     }
   }
 
@@ -53,15 +66,13 @@ $sliderWidth: 5px;
     background-color: rgb(197, 138, 138);
     left: 50%;
     bottom: 50%;
-    transform: translate(-50%, -50%);
+
+    &_horizontal {
+      transform: translate(-50%, -50%);
+    }
 
     &_vertical {
       transform: translate(50%, 50%);
     }
   }
-}
-
-.last-active {
-  z-index: 3;
-  background-color: rgb(0, 255, 76);
 }
