--- a/src/slider/view/styles/view.scss
+++ b/src/slider/view/styles/view.scss
@@ -1,78 +1,13 @@
 $sliderWidth: 5px;
+@import '../components/bar/bar.scss';
+@import '../components/range/range.scss';
+@import '../components/toggle/toggle.scss';
+@import '../components/thumb/thumb.scss';
+@import '../components/scale/scale.scss';
 
 .simpleSlider {
   position: relative;
   width: 100%;
   height: 100%;
   font-family: Arial, Helvetica, sans-serif;
-
-  &__bar {
-    position: relative;
-    background-color: rgb(206, 206, 206);
-
-    &_horizontal {
-      width: 100%;
-      height: $sliderWidth;
-    }
-
-    &_vertical {
-      width: $sliderWidth;
-      height: 100%;
-    }
-  }
-
-  &__range {
-    position: absolute;
-    background-color: tomato;
-
-    &_horizontal {
-      height: 100%;
-      left: 0%;
-      right: 0%;
-    }
-
-    &_vertical {
-      height: auto;
-      width: 100%;
-      bottom: 0%;
-      top: 0%;
-    }
-  }
-
-  &__toggle {
-    position: absolute;
-    width: 15px;
-    height: 15px;
-    background-color: rgb(129, 46, 46);
-
-    &_horizontal {
-      transform: translate(-46%, -33%);
-    }
-
-    &_vertical {
-      bottom: 0%;
-      transform: translate(-33%, 44%);
-    }
-
-    &_last-active {
-      z-index: 3;
-      background-color: rgb(0, 255, 76);
-    }
-  }
-
-  &__thumb {
-    position: absolute;
-    padding: 4px 6px;
-    background-color: rgb(197, 138, 138);
-    left: 50%;
-    bottom: 50%;
-
-    &_horizontal {
-      transform: translate(-50%, -50%);
-    }
-
-    &_vertical {
-      transform: translate(50%, 50%);
-    }
-  }
 }
