--- a/src/slider/view/components/thumb/thumb.scss
+++ b/src/slider/view/components/thumb/thumb.scss
@@ -2,14 +2,17 @@
   position: absolute;
   padding: 4px 6px;
   background-color: rgb(197, 138, 138);
-  left: 50%;
   bottom: 50%;
+  z-index: 2;
+  user-select: none;
 
   &_horizontal {
+    left: 50%;
     transform: translate(-50%, -50%);
   }
 
   &_vertical {
-    transform: translate(50%, 50%);
+    right: 50%;
+    transform: translate(-50%, 50%);
   }
 }
