--- a/src/slider/view/styles/view.scss
+++ b/src/slider/view/styles/view.scss
@@ -10,4 +10,12 @@ $sliderWidth: 5px;
   width: 100%;
   height: 100%;
   font-family: Arial, Helvetica, sans-serif;
+  
+  &_horizontal {
+    display: block;
+  }
+
+  &_vertical {
+    display: flex;
+  }
 }
