--- a/src/slider/view/components/toggle/toggle.scss
+++ b/src/slider/view/components/toggle/toggle.scss
@@ -2,6 +2,7 @@
   position: absolute;
   width: 15px;
   height: 15px;
+  z-index: 2;
   background-color: rgb(129, 46, 46);
 
   &_horizontal {
@@ -10,7 +11,7 @@
 
   &_vertical {
     bottom: 0%;
-    transform: translate(-33%, 44%);
+    transform: translate(-33%, 46%);
   }
 
   &_last-active {
