Фикс демо-страницы под новые опции #8

--- a/src/demo/components/panel/components/panel-slider/panel-slider.pug
+++ b/src/demo/components/panel/components/panel-slider/panel-slider.pug
@@ -1,10 +1,10 @@
-mixin panel-slider({ min= 0, max= 100, step= 1, orientation= 'horizontal', type= 'from-start', from= 50, to, withRange= true, withThumb= true, withScale= true }={})
+mixin panel-slider({ min= 0, max= 100, step= 1, orientation= 'horizontal', direction= 'ltr', from= 50, to, withRange= true, withThumb= true, withScale= true }={})
   .panel-slider(
     data-min= min
     data-max= max
     data-step= step
     data-orientation= orientation
-    data-type= type
+    data-direction= direction
     data-from= from
     data-to= to
     data-with-range= `${withRange}`
