--- a/src/demo/components/panel/components/panel-slider/panel-slider.pug
+++ b/src/demo/components/panel/components/panel-slider/panel-slider.pug
@@ -1,5 +1,5 @@
 mixin panel-slider({ min= 0, max= 100, step= 1, orientation= 'horizontal', direction= 'ltr', from= 50, to, withRange= true, withThumb= true, withScale= true }={})
-  .panel-slider(
+  .panel-slider.js-panel-slider(
     data-min= min
     data-max= max
     data-step= step
