Перенос комопнента slider в общие компоненты demo страницы #10

--- a/src/demo/components/slider/slider.pug
+++ b/src/demo/components/slider/slider.pug
@@ -1,5 +1,5 @@
-mixin panel-slider({ min= 0, max= 100, step= 1, orientation= 'horizontal', direction= 'ltr', from= 50, to, withRange= true, withThumb= true, withScale= true }={})
-  .panel-slider.js-panel-slider(
+mixin slider({ min= 0, max= 100, step= 1, orientation= 'horizontal', direction= 'ltr', from= 50, to, withRange= true, withThumb= true, withScale= true }={})
+  .slider.js-slider(
     data-min= min
     data-max= max
     data-step= step
