--- a/src/demo/components/slider/slider.scss
+++ b/src/demo/components/slider/slider.scss
@@ -1,6 +1,6 @@
-@import '../../../../../slider/styles/view.scss';
+@import '../../../slider/styles/view.scss';
 
-.panel-slider {
+.slider {
   width: 100%;
   height: 350px;
   display: flex;
