Добавление новой опции type #8

--- a/src/demo/components/slider/slider.pug
+++ b/src/demo/components/slider/slider.pug
@@ -1,8 +1,9 @@
-mixin slider({ min= 0, max= 100, step= 1, orientation= 'horizontal', direction= 'ltr', from= 50, to, withRange= true, withThumb= true, withScale= true }={})
+mixin slider({ min= 0, max= 100, step= 1, type= "single", orientation= 'horizontal', direction= 'ltr', from= 50, to, withRange= true, withThumb= true, withScale= true }={})
   .slider.js-slider(
     data-min= min
     data-max= max
     data-step= step
+    data-type= type
     data-orientation= orientation
     data-direction= direction
     data-from= from
